# cppUniversityScndYear

./: CMakeLists.txt  main.cpp
firstTask/example/: firstTaskExample.cpp  firstTaskExample.h
firstTask/solution/: firstTaskSolution.cpp  firstTaskSolution.h
fourthTask/solution/: Worker.cpp  Worker.h
secondTask/solution/: RectangledTriangle.h  SecondTaskSolution.cpp
thirdTask/solution/: Competition.cpp  Competition.h  Date.cpp  Date.h  ParticipantCompetition.cpp  ParticipantCompetition.h  Show.cpp  Show.h
